[gd_scene load_steps=5 format=3 uid="uid://d1f7oecpsrav"]

[ext_resource type="Script" uid="uid://44kwvh664crx" path="res://Game/card_menu.gd" id="1_6yltm"]
[ext_resource type="Texture2D" uid="uid://dixd08ecsoslj" path="res://Art/icon_minus.png" id="2_fcmxo"]
[ext_resource type="Texture2D" uid="uid://dh1x6kd1e0qkn" path="res://Art/icon_plus.png" id="3_44qlh"]

[sub_resource type="LabelSettings" id="LabelSettings_rbfgi"]
font_size = 68
font_color = Color(0.0699425, 0.148939, 0.185547, 1)

[node name="BG" type="PanelContainer"]
offset_top = -302.0
offset_right = 594.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 302)
theme_type_variation = &"PanelContainer_2"
script = ExtResource("1_6yltm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="cont_menu" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/cont_menu"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"PanelContainer_Toggle"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/cont_menu/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="btn_font_less" type="Button" parent="MarginContainer/cont_menu/PanelContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_fcmxo")

[node name="Label" type="Label" parent="MarginContainer/cont_menu/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"Label_Body"
text = "Font size"
label_settings = SubResource("LabelSettings_rbfgi")

[node name="btn_font_more" type="Button" parent="MarginContainer/cont_menu/PanelContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_44qlh")

[node name="spacer8" type="Control" parent="MarginContainer/cont_menu"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="btn_add_q" type="Button" parent="MarginContainer/cont_menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Text"
text = "Add custom question"

[node name="btn_delete_q" type="Button" parent="MarginContainer/cont_menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Text"
text = "Delete this question"

[node name="btn_shuffle deck" type="Button" parent="MarginContainer/cont_menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Text"
button_mask = 5
text = "Shuffle deck"

[node name="btn_goto_first" type="Button" parent="MarginContainer/cont_menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Text"
button_mask = 5
text = "Go to first question"

[connection signal="pressed" from="MarginContainer/cont_menu/PanelContainer/HBoxContainer/btn_font_less" to="." method="_on_btn_font_less_pressed"]
[connection signal="pressed" from="MarginContainer/cont_menu/PanelContainer/HBoxContainer/btn_font_more" to="." method="_on_btn_font_more_pressed"]
[connection signal="pressed" from="MarginContainer/cont_menu/btn_add_q" to="." method="_on_btn_add_q_pressed"]
[connection signal="pressed" from="MarginContainer/cont_menu/btn_delete_q" to="." method="_on_btn_delete_q_pressed"]
[connection signal="pressed" from="MarginContainer/cont_menu/btn_shuffle deck" to="." method="_on_btn_shuffle_deck_pressed"]
[connection signal="pressed" from="MarginContainer/cont_menu/btn_goto_first" to="." method="_on_btn_goto_first_pressed"]
